ISPN-15320 JDBC datasource lookup via CDI
- Add Quarkus support for JDBC stores

Co-authored-by: Ryan Emerson <remerson@redhat.com>